# Elosys-Testnet

./: .gitignore  Cargo.toml  README.md
elosys/: Cargo.toml  README.md  build.rs
elosys-cli/: README.md  STYLE_GUIDE.md  package.json
elosys-cli/scripts/: build.sh  deploy-brew.sh  push-version.sh
elosys-cli/src/: command.ts  flags.ts  package.ts  snapshot.ts
elosys-cli/src/hooks/: version.ts
elosys-cli/src/utils/: fees.ts  s3.ts  transaction.ts
elosys-mpc/: Cargo.toml  README.md
elosys-phase/: Cargo.toml  README.md
elosys-zkp/: Cargo.toml  README.md
elosys-zkp/src/: constants.rs
elosys/src/: errors.rs  lib.rs  merkle_note.rs  merkle_note_hash.rs  nacl.rs  note.rs
elosys/src/assets/: asset.rs  asset_identifier.rs
elosys/src/keys/: mod.rs  public_address.rs  view_keys.rs
elosys/src/sapling_params/: README.md
elosys/src/serializing/: aead.rs  mod.rs
elosys/src/transaction/: burns.rs  mints.rs  mod.rs  outputs.rs  spends.rs  tests.rs  utils.rs  value_balances.rs  version.rs
tools/: reset-network-genesis.sh
